1.4.0i2:
    Core & Setup:
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_powerbanks, gude_relayport, gude_temp, gude_humidity: new checks for Gude Power Control devices
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances
    * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
    * 3956 fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 3947 mssql_blocked_sessions: thresholds for wait time can be set now...
    * 3830 netapp_api_luns: new check to monitor the filesystem usage of LUNs
    * 3949 ucd_cpu_load: Genugate devices are now displaying CPU load...
    * 3950 openbsd_sensors: Genugate devices are now handling hardware sensors...
    * 3749 storcli_pdisks, storcli_vdrives: New checks to monitor RAID status via StorCLI utility
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
    * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
    * 3909 FIX: postfix_mailq: fixed readout postfix config
    * 3748 FIX: vertias_vcs: Fix empty agent section for standard xinetd configuration...
    * 3935 FIX: FIX avaya_45xx_cpu: check got UNKNOWN using Nagios core
    * 3896 FIX: Agent RPMs: Fixing dependency issue with old check_mk-agent-oracle-*.rpm and check_mk-agent-logwatch-*.rpm
    * 3936 FIX: chrony: support new params dictionary and rule "State of NTP time synchronisation"