@@ -1,5 +1,6 @@
 1.4.0i2:
     Core & Setup:
+    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
     * 3648 FIX: Fixed log file parsing of host states...
     * 3965 FIX: Nagios: Improved handling of broken core config...
 
